# vggt-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  environment.yml  pyproject.toml  vggt_handler.py  vggt_reconstruction_service_spec.md
scripts/: bootstrap_conda.sh  check_env.py  client_example.py  docker-entrypoint.sh  docker_compose.sh
tests/: test_api.py  test_backends.py  test_storage.py  test_vggt_geometry_contract.py
vggt_serve/: __init__.py  api.py  app.py  config.py  errors.py  inference.py  logging.py  schemas.py  storage.py
